<resources>
    <string name="app_name">PetTin</string>
    <string name="login_page">Login Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User? <u>Register Now!</u></string>
    <string name="register">Register</string>
    <string name="register_page">Register Page</string>
    <string name="existing_user_login"><u>Existing User Login</u></string>
    <string name="email">Email</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_playdate">Playdate</string>
    <string name="menu_post">Post</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_restaurant">Restaurant</string>
    <string-array name="gender">
        <item>Boy</item>
        <item>Girl</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_group_chat">CreateGroupChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
=======

    <string name="post_date">Post Date</string>
    <string name="location">Location</string>
    <string name="post_content">Post content</string>
    <string name="title">Title</string>
    <string name="_1_1k">1.1k</string>
</resources>