<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_playdate"
        android:icon="@drawable/ic_baseline_pets"
        app:showAsAction="ifRoom"
        android:title="@string/menu_playdate" />





    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="ifRoom"
        android:title="@string/menu_post" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_baseline_chat_bubble_outline"
        app:showAsAction="ifRoom"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/nav_restaurant"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_restaurant"
        android:title="@string/menu_restaurant" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_profile"
        app:showAsAction="ifRoom"
        android:title="@string/menu_profile" />

</menu>