<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowPostDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">


        <ImageView
            android:id="@+id/postDetailImg"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:background="@color/cardview_shadow_start_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_pets"
            tools:ignore="ImageContrastCheck" />


        <ImageView
            android:id="@+id/postDetailUserImg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/postDetailUsername"
            app:layout_constraintTop_toTopOf="@+id/postDetailUsername"
            app:layout_constraintTop_toBottomOf="@+id/postDetailImg"
            android:scaleType="fitXY"
            android:src="@drawable/circle_profile" />


        <TextView
            android:textSize="18sp"
            android:textColorHighlight="@color/black"
            android:textStyle="bold"
            android:id="@+id/postDetailUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailImg"
            tools:text="Username" />

        <TextView
            android:id="@+id/postDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailLocation"
            />


        <View
            android:background="#2e2e2e"
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailTitle" />




        <TextView
            android:textColor="#373737"
            android:lineSpacingExtra="8dp"
            android:id="@+id/postDetailContent"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/post_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:textColor="#373737"
            android:lineSpacingExtra="8dp"
            android:id="@+id/postDetailLocation"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailUsername" />

        <TextView
            android:textColor="#373737"
            android:lineSpacingExtra="8dp"
            android:id="@+id/postDetailTime"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/post_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailContent" />


<!--        <ImageView-->
<!--            android:id="@+id/likeImg"-->
<!--            android:layout_width="17dp"-->
<!--            android:layout_height="17dp"-->
<!--            android:src="@drawable/heart"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="24dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/postDetailTime" />-->

<!--        <TextView-->
<!--            android:id="@+id/postDetailLikes"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/_1_1k"-->
<!--            android:layout_marginStart="10dp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/likeImg"-->
<!--            app:layout_constraintStart_toEndOf="@+id/likeImg"-->
<!--            app:layout_constraintTop_toTopOf="@+id/likeImg" />-->

        <EditText
            android:hint="Write Comment"
            android:background="@drawable/edittext_rounded"
            android:id="@+id/editText_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailTime"  />

        <Button
            android:id="@+id/button_addComment"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/edittext_rounded"
            android:text="Add"
            app:layout_constraintBottom_toBottomOf="@+id/editText_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editText_comment"
            app:layout_constraintTop_toTopOf="@+id/editText_comment"
            app:layout_constraintVertical_bias="0.529" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_comment"/>
        <requestFocus/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>